<resources>
    <string name="app_name">App</string>

    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="mobile">Phone</string>
    <string name="password">Password</string>
    <string name="associatedhosital">Associated Hospital</string>
    <string name="doctorsignuo">SignUp</string>

    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="login">Login</string>

    <string name="cancel">Cancel</string>

</resources>
