<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.hospital.hospitalapp.doctormodule.DoctorSignUp">

    <EditText
        android:id="@+id/et_doctor_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
       />

    <EditText
        android:id="@+id/et_doctor_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:layout_below="@+id/et_doctor_username"
        android:layout_alignLeft="@+id/et_doctor_username"
        android:layout_alignStart="@+id/et_doctor_username"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_doctor_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:layout_below="@+id/et_doctor_email"
        android:layout_alignLeft="@+id/et_doctor_email"
        android:layout_alignStart="@+id/et_doctor_email"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_doctor_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/et_doctor_phone"
        android:layout_alignLeft="@+id/et_doctor_phone"
        android:layout_alignStart="@+id/et_doctor_phone"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/et_associatedhospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/associatedhosital"
        android:inputType="textPersonName"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/et_doctor_password"
        android:layout_alignStart="@+id/et_doctor_password" />

    <Button
        android:id="@+id/btn_doctor_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="SignUp"
        tools:text="@string/doctorsignuo"
        android:textColor="#ffffff"
        android:layout_below="@+id/et_associatedhospital"
        android:layout_alignRight="@+id/et_associatedhospital"
        android:layout_alignEnd="@+id/et_associatedhospital"
        android:layout_marginRight="61dp"
        android:layout_marginEnd="61dp"
        android:background="@drawable/buttonrounded"/>
    <Button
        android:id="@+id/btn_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonrounded"
        android:textColor="#ffffff"
        android:layout_marginTop="38dp"
        android:text="Login"
        android:layout_below="@+id/btn_doctor_signup"
        android:layout_alignLeft="@+id/btn_doctor_signup"
        android:layout_alignStart="@+id/btn_doctor_signup" />

</RelativeLayout>
