<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="67dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/et_login_username"
        android:layout_alignLeft="@+id/et_login_username"
        android:layout_alignStart="@+id/et_login_username" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonrounded"
        android:textColor="#ffffff"
        android:text="@string/login"
        android:layout_below="@+id/et_login_password"
        android:layout_alignLeft="@+id/btn_doctor_signup"
        android:layout_alignStart="@+id/btn_doctor_signup"
        android:layout_marginTop="33dp"
        />

    <Button
        android:id="@+id/btn_doctor_signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Doctor SignUp"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonrounded"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/btn_patient_signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Patient SignUp"
        android:layout_below="@+id/btn_doctor_signup"
        android:layout_alignRight="@+id/btn_doctor_signup"
        android:layout_alignEnd="@+id/btn_doctor_signup"
        android:background="@drawable/buttonrounded"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/tv_reset_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="Reset Password"
        android:visibility="gone"
        android:layout_below="@+id/btn_patient_signup"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="44dp"
        android:layout_marginEnd="44dp"
        android:textSize="14sp"
        android:textStyle="bold"
        />

</RelativeLayout>
